# tacoeditor

./: .gitignore  README.md  hatch_build.py  pyproject.toml  requirements.txt
gl_preview/: CMakeLists.txt  gl_preview.c  gl_preview.h
native/: CMakeLists.txt  gl_preview.c  gl_preview.h
tacoeditor/: __main__.py  main.py
tacoeditor/gl_prewiew/: CMakeLists.txt  gl_preview.c  gl_preview.h
tacoeditor/resources/: window.xml
