[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tacoeditor"
version = "0.1.0"
description = "A beatmap editor for osu!taiko and Taco"
requires-python = ">=3.8"
dependencies = [
    "PyGObject"
]

[project.optional-dependencies]
gl_preview = ["setuptools"]

[project.gui-scripts]
tacoeditor = "tacoeditor:main"

[tool.hatch.build.targets.wheel]
packages = ["tacoeditor"]
artifacts = [
    "tacoeditor/resources/*.so",
    "tacoeditor/resources/*.dll",
    "tacoeditor/resources/*.typelib"
]

[tool.hatch.build.hooks.custom]
require-runtime-features = ["gl_preview"]
